basic-layout, first week

--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,25 @@
     <title>Document</title>
 </head>
 <body>
-    Hello  World!
-    I am Jhonatan Rios!
-    Welcome to my business
+    <header>
+        Header Content
+    </header>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Projects</li>
+            <li>Services</li>
+            <li>Contact Us</li>
+        </ul>
+    </nav>
+    <main>
+        Main Content
+    </main>
+    <aside>
+        Aside Content
+    </aside>
+    <footer>
+        Footer Content
+    </footer>
 </body>
 </html>
