--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/layout.css">
 </head>
 <body>
     <header>
-        Header Content
+       <div>Header Content</div> 
     </header>
     <nav>
         <ul>
@@ -16,12 +17,16 @@
             <li>Contact Us</li>
         </ul>
     </nav>
-    <main>
-        Main Content
-    </main>
-    <aside>
-        Aside Content
-    </aside>
+    <div class="mainbox">
+        <main>
+            <div id="content">Main Content</div>             
+        </main>
+        <aside>
+            <div id="aside">Aside Content</div>
+           
+        </aside>
+    </div>
+    
     <footer>
         Footer Content
     </footer>
