--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/week01/styles/layout.css">
+    <link rel="stylesheet" href="/styles/layout.css">
 </head>
-<body>
+<body>    
     <header>
        <div>Header Content</div> 
     </header>
@@ -29,6 +29,6 @@
     
     <footer>
         Footer Content
-    </footer>
+    </footer>  
 </body>
 </html>
