link stylesheet modified

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="WDD 131 - Dynamic Web Fundamentals, Jhonatan Rios">
     <title>WDD 131 - Dynamic Web Fundamentals - Jhonatan Rios</title>
-    <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="styles/base.css">
     <script src="https://kit.fontawesome.com/b6da81f85a.js" crossorigin="anonymous"></script>
     
 </head>
