--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="description">
                 <div class="aboutme">
                     <h2>About Me</h2>
-                    <img src="images/jhonatanrios.jpg" alt="Jhonatan Rios">
+                    <img src="/images/jhonatanrios.jpg" alt="Jhonatan Rios">
                     <p>
                         My name is Jhonatan Rios. I was born in west of Colombia but I living in Bogota. 
                         I am currently working as content moderator agent at Teleperformance. My wife is in the last semester of 
@@ -55,7 +55,7 @@
                         and the Teatro Colón.                                 
                     </p>
                     <div class="flag">
-                        <img src="images/Bandera_de_Bogotá.jpg" alt="Flag of Bogota">
+                        <img src="/images/Bandera_de_Bogotá.jpg" alt="Flag of Bogota">
                         <p id="flag"> Official Flag of Bogota.</p>                          
                         
                                  
@@ -82,6 +82,6 @@
         <p></p>
         <p style="color: yellow;">Last Modification: <span id="lastModified"></span></p>
     </footer>
-    <script src="scripts/getdates.js"></script>
+    <script src="/scripts/getdates.js"></script>
 </body>
 </html>
