I changed folder of temples.html

--- a/temples.html
+++ b/temples.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Media query learning activity example page">
     <title>WDD 131 - Media Query Example</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">    
-    <link rel="stylesheet" href="styles/temples-large.css">
+    <link rel="stylesheet" href="/styles/temples-large.css">
     <link rel="stylesheet" href="styles/temples.css">
     
 </head>
