--- a/temples.html
+++ b/temples.html
@@ -8,7 +8,7 @@
     <title>WDD 131 - Media Query Example</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">    
     <link rel="stylesheet" href="/styles/temples-large.css">
-    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="/styles/temples.css">
     
 </head>
 <body>
