--- a/temples.html
+++ b/temples.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Media query learning activity example page">
     <title>WDD 131 - Media Query Example</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">    
-    <link rel="stylesheet" href="/styles/temples-large.css">
-    <link rel="stylesheet" href="/styles/temples.css">
+    <link rel="stylesheet" href="styles/temples-large.css">
+    <link rel="stylesheet" href="styles/temples.css">
     
 </head>
 <body>
@@ -37,47 +37,47 @@
         <h1>Home</h1>
         <figure class="container">            
             <div class="item">
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
 
             <div class="item">
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
 
             <div class="item">
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
 
             <div class="item">
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
 
             <div class="item">
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
 
             <div class="item"> 
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
 
             <div class="item">
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
 
             <div class="item">
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
 
             <div class="item">
-                <img src="/images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
+                <img src="images/Boise-Idaho-Temple2.jpg" alt="Boise temple  in Idaho">
                 <p>Boise Idaho Temple</p>
             </div>
         </figure>        
