--- a/place.html
+++ b/place.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author"  content="Jhonatan Rios">
     <meta name="description" content="Media query, place or country">
-    <title>WDD 131 - </title>
+    <title>WDD 131 - Place</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">    
     <link rel="stylesheet" href="styles/place-large.css">
     <link rel="stylesheet" href="styles/place.css">  
@@ -73,6 +73,7 @@
         <p></p>
         <p style="color: white;">Last Modification: <span id="lastModified"></span></p>
     </footer>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="scripts/place.js"></script> 
 </body>
 </html>
