--- a/temples.html
+++ b/temples.html
@@ -18,9 +18,9 @@
             <div class="menu-toggle">
                 <input type="checkbox" id="menu-toggle-checkbox">
                 <label for="menu-toggle-checkbox" class="menu-icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>                    
+                    <span>-</span>
+                    <span>-</span>
+                    <span>-</span>                    
                 </label>
                 <ul class="menu">   
                     <li ><a href="" id="x-close">X</a></li>                 
@@ -87,6 +87,7 @@
         <p></p>
         <p style="color: yellow;">Last Modification: <span id="lastModified"></span></p>
     </footer>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="scripts/temple.js"></script>   
 </body>
 </html>
