Add a confirmation page

--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
     <header class="product">
         <h1>Product Review</h1>
     </header>
-        <form action="review.html" method="get">        
+        <form action="confirmation.html" method="get">        
             <div class="product-select">
                 <label for="product-select">Product Name</label> <br>          
                 <select name="product-name" id="product-select" required>
