--- a/confirmation.html
+++ b/confirmation.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirmation</title>
+    <meta name="author"  content="Jhonatan Rios">
+    <meta name="description" content="Form activity">
+    <title>WDD 131 - Form Confirmation</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">    
     <link rel="stylesheet" href="styles/form-large.css">
     <link rel="stylesheet" href="styles/form.css">
 </head>
