update img with loading=lazy

--- a/portfolio/confirmation.html
+++ b/portfolio/confirmation.html
@@ -6,7 +6,7 @@
     <meta name="author"  content="Jhonatan Rios">
     <meta name="description" content="Form activity">
     <title>WDD 131 - Project Gemini - Jhonatan Rios</title>
-    <link rel="shortcut icon" href="images/favicon.JPG">
+    <link rel="shortcut icon" href="images/favicon.JPG" loading="lazy">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">    
     <link rel="stylesheet" href="styles/portfolio-large.css">
     <link rel="stylesheet" href="styles/portfolio.css">
