--- a/portfolio/e-portfolio.html
+++ b/portfolio/e-portfolio.html
@@ -31,7 +31,7 @@
             <div class="description">
                 <div class="aboutme">
                     <h2>About Me</h2>
-                    <img src="images/jrios.jpg" alt="Jhonatan Rios" class="imgjr">
+                    <img src="images/jrios.jpg" alt="Jhonatan Rios" class="imgjr" loading="lazy">
                     <p>
                         <span>Hi!!</span> I am Jhonatan Rios. Welcome to my website. Through this page, 
                         you will find a little bit about me and my life. I am a student at BYU-Idaho, 
@@ -57,7 +57,7 @@
                         communications.                          
                     </p>
                     <div class="perception">
-                        <img class="skillsImg" src="images/percepcion.png" alt="Perception">
+                        <img class="skillsImg" src="images/percepcion.png" alt="Perception" loading="lazy">
                         <p id="perception"></p>                         
                     </div>
                 </div>
