--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="WDD 131 - Project Gemini, Jhonatan Rios">
     <title>WDD 131 - Project Gemini - Jhonatan Rios</title>
-    <link rel="shortcut icon" href="images/favicon.JPG">
+    <link rel="shortcut icon" href="images/favicon.JPG" loading="lazy">
     <link rel="stylesheet" href="styles/portfolio-large.css">
     <link rel="stylesheet" href="styles/portfolio.css">
     <script src="https://kit.fontawesome.com/b6da81f85a.js" crossorigin="anonymous"></script>
@@ -38,19 +38,19 @@
                         </video>
                     </div>                    
                     <div class="container">
-                        <img src="images/pokedex2.JPG" alt="pokedex" class="imgPro">
+                        <img src="images/pokedex2.JPG" alt="pokedex" class="imgPro" loading="lazy">
                         <div class="overlay">
                             <div class="text"><a href="https://natanri.github.io/cse121b/project.html" target="_blank">Pokedex</a></div>                            
                         </div>
                      </div>
                      <div class="container">
-                        <img src="images/projectWeather.JPG" alt="weather" class="imgPro">
+                        <img src="images/projectWeather.JPG" alt="weather" class="imgPro" loading="lazy">
                         <div class="overlay">
                             <div class="text"><a href="https://natanri.github.io/WeatherProject/" target="_blank">Weather</a></div>                            
                         </div>
                      </div>
                      <div class="container">
-                        <img src="images/projectCocaColaInterface.jpg" alt="Project java cocacola" class="imgPro">
+                        <img src="images/projectCocaColaInterface.jpg" alt="Project java cocacola" class="imgPro" loading="lazy">
                         <div class="overlay">
                             <div class="text"><a href="images/Sistema.jar" download="Sistema.jar" target="_blank">Coca Cola</a></div>                            
 
