--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="https://www.linkedin.com/in/jhonatan-rios/" target="_blank">LinkedIn</a></li>
                 <li><a href="https://byui.instructure.com/" target="_blank">I-Learn</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures?lang=spa" target="_blank">Scripture</a></li>
-                <li><a href="http://127.0.0.1:5500/index.html" target="_blank">Final Project</a></li>
+                <li><a href="portfolio/e-portfolio.html" target="_blank">Final Project</a></li>
             </ul>
         </nav>
     </header> 
